--- a/static/css/variables.less
+++ b/static/css/variables.less
@@ -16,6 +16,14 @@
 @high-risk-color: #e33030;
 @warning-color: #d19d2e;
 
+/* state colours */
+@received-state-color: #E9AA22;
+@pending-state-color: #F47B63;
+@muted-state-color: #A0A0A0;
+@cleared-state-color: #A0A0A0;
+@sent-state-color: #84AA69;
+@scheduled-state-color: #A0A0A0;
+
 /* kujua-reporting colours */
 @red: #ca410b;
 @green: #8EB51C;
